--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -4238,18 +4238,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A couple of observations can be made. Firstly, there is a clear line where weekend and weekday prices are equal. Weekend prices being higher than weekday prices seem restricted to sub $100 resorts. Recall from the boxplot earlier that the distribution for weekday and weekend prices in Montana seemed equal. Is this confirmed in the actual data for each resort? Big Mountain resort is in Montana, so the relationship between these quantities in this state are particularly relevant."
+    "A couple of observations can be made. Firstly, there is a clear line where weekend and weekday prices are equal. Weekend prices being higher than weekday prices seem restricted to sub $100 resorts. **Recall from the boxplot earlier that the distribution for weekday and weekend prices in Montana seemed equal. Is this confirmed in the actual data for each resort? Big Mountain resort is in Montana, so the relationship between these quantities in this state are particularly relevant.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AdultWeekend</th>\n",
+       "      <th>AdultWeekday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>42.0</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>63.0</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>49.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>144</th>\n",
+       "      <td>48.0</td>\n",
+       "      <td>48.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>46.0</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>50.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>67.0</td>\n",
+       "      <td>67.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>39.0</td>\n",
+       "      <td>39.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>81.0</td>\n",
+       "      <td>81.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     AdultWeekend  AdultWeekday\n",
+       "141          42.0          42.0\n",
+       "142          63.0          63.0\n",
+       "143          49.0          49.0\n",
+       "144          48.0          48.0\n",
+       "145          46.0          46.0\n",
+       "146          39.0          39.0\n",
+       "147          50.0          50.0\n",
+       "148          67.0          67.0\n",
+       "149          47.0          47.0\n",
+       "150          39.0          39.0\n",
+       "151          81.0          81.0"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 37#\n",
     "#Use the loc accessor on ski_data to print the 'AdultWeekend' and 'AdultWeekday' columns for Montana only\n",
-    "ski_data.___[ski_data.state == ___, [___, ___]]"
+    "ski_data.loc[ski_data.state =='Montana', ['AdultWeekend', 'AdultWeekday']]"
    ]
   },
   {
@@ -4261,7 +4366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -4272,7 +4377,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4290,9 +4395,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kevinkwasnik/opt/anaconda3/lib/python3.9/site-packages/pandas/core/frame.py:4906: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().drop(\n",
+      "/Users/kevinkwasnik/opt/anaconda3/lib/python3.9/site-packages/pandas/util/_decorators.py:311: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return func(*args, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "ski_data.drop(columns='AdultWeekday', inplace=True)\n",
     "ski_data.dropna(subset=['AdultWeekend'], inplace=True)"
@@ -4300,7 +4422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -4309,7 +4431,7 @@
        "(277, 25)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4323,6 +4445,37 @@
    "metadata": {},
    "source": [
     "Perform a final quick check on the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "141    42.0\n",
+       "142    63.0\n",
+       "143    49.0\n",
+       "144    48.0\n",
+       "145    46.0\n",
+       "146    39.0\n",
+       "147    50.0\n",
+       "148    67.0\n",
+       "149    47.0\n",
+       "150    39.0\n",
+       "151    81.0\n",
+       "Name: AdultWeekend, dtype: float64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ski_data.loc[ski_data.state =='Montana']['AdultWeekend']"
    ]
   },
   {
