--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -4494,7 +4494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -4591,7 +4591,7 @@
        "39       4  16.0"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4611,7 +4611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -4620,7 +4620,7 @@
        "array([ 0.,  4.,  8., 12., 16., 20.])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4638,7 +4638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -4653,7 +4653,7 @@
        "Name: %, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4671,7 +4671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -4733,7 +4733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -4742,7 +4742,7 @@
        "(277, 25)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4760,9 +4760,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory ../data was created.\n",
+      "Writing file.  \"../data/ski_data_cleaned.csv\"\n"
+     ]
+    }
+   ],
    "source": [
     "# save the data to a new csv file\n",
     "datapath = '../data'\n",
@@ -4771,9 +4780,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing file.  \"../data/state_summary.csv\"\n"
+     ]
+    }
+   ],
    "source": [
     "# save the state_summary separately.\n",
     "datapath = '../data'\n",
@@ -4798,7 +4815,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 3** Your answer here"
+    "**A: 3** \n",
+    "\n",
+    "The data was reshaped to remove any missing rows or redundancies. In particular, 'fastEight' data was deemed irelevant as only half the resorts had data on fast eight lifts. Both a horizontal bar plot and a box plot were used to compare average weekday and average weekend prices. The chart identified Montana, our target state, as one of two that had no difference in weekday and weekend prices.\n",
+    "\n",
+    "After, we addressed the numerical categories such as Night Skiing, Years Open, and Skiiable Area. Some outliers were present and adjusted accordingly, which in turn corrected the distrubutions of the above mentioned. We summed these features by state after removing outliers and correcting state names by column (here, four states needed to be rectified).\n",
+    "\n",
+    "As it stands, we can compare Big Mountain Resort to the state sums, and potentially adjust accordingly. Some missing values remain, but the summary of our target attributes (resorts_per_state, state_total_skiable_area_ac, state_total_days_open, state_total_terrain_parks, state_total_nightskiing_ac) are all availabe for use in EDA.\t\n",
+    "\n"
    ]
   }
  ],
