mean absolute error MAE function defined

--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1430,8 +1430,8 @@
     "    y -- the observed values\n",
     "    ypred -- the predicted values\n",
     "    \"\"\"\n",
-    "    abs_error = np.abs(___ - ___)\n",
-    "    mae = np.mean(___)\n",
+    "    abs_error = np.abs(y - ypred)\n",
+    "    mae = np.mean(abs_error)\n",
     "    return mae"
    ]
   },
