--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1517,8 +1517,8 @@
     "    y -- the observed values\n",
     "    ypred -- the predicted values\n",
     "    \"\"\"\n",
-    "    sq_error = (___ - ___)**2\n",
-    "    mse = np.mean(___)\n",
+    "    sq_error = (y - ypred)**2\n",
+    "    mse = np.mean(sq_error)\n",
     "    return mse"
    ]
   },
@@ -1780,8 +1780,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/guy/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:15: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  from ipykernel import kernelapp as app\n"
+      "/var/folders/92/fmsgf0056l97n6qst76j75sm0000gp/T/ipykernel_67439/1803819837.py:15: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  R2 = 1.0 - sum_sq_res / sum_sq_tot\n"
      ]
     },
     {
