--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -3839,7 +3839,10 @@
    "metadata": {},
    "source": [
     "**A: 1** \n",
-    "\n"
+    "\n",
+    "To process ski data both a linear and random forest model were tried. Ultimately, the random forest was chosen because the random forest model has a lower cross-validation mean absolute error by almost $1. It also exhibits less variability.\n",
+    "\n",
+    "To pre-process both imputation by mean and median was attempted; ultimately, using mean or median made a negligible difference for this data set and these models. After each model was created, we cross-validated each to find the best k value. Additionally, we determined that a training set of 40-50 was sufficient for an accurate output; thus, no further data collection was recommended."
    ]
   }
  ],
